--- a/Creaturemon/app/build.gradle
+++ b/Creaturemon/app/build.gradle
@@ -33,10 +33,14 @@ dependencies {
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
   // Room
-  implementation 'androidx.room:room-runtime:2.0.0'
-  annotationProcessor 'androidx.room:room-compiler:2.0.0'
-  kapt 'androidx.room:room-compiler:2.0.0'
+  implementation 'androidx.room:room-runtime:2.3.0'
+  implementation "androidx.room:room-ktx:2.3.0"
+  kapt 'androidx.room:room-compiler:2.3.0'
+
+  // KTX
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+  implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
   testImplementation 'junit:junit:4.13.2'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
