Add Test CreatureViewModel

--- a/Creaturemon/app/build.gradle
+++ b/Creaturemon/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.3.0'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
